# revospeech

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  TODO.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
REPO_ANALYSIS/: 00_SUMMARY.md  01_core_package.md  02_asr_module.md  03_tts_module.md  04_registry_catalog.md  05_cli.md  06_tests.md  07_docs_examples.md  08_ci_config.md
audio/: reference_transcripts.txt
docs/: api.md  cli.md  configuration.md  extension.md  index.md  models.md  quickstart.md  troubleshooting.md  util.md
docs/api/: asr.md  cli.md  registry.md  results.md  tts.md  util.md
docs/models/: revovoice.md  sidon.md  vits-ms.md
examples/: 01_quickstart.py  02_pick_model.py  03_transcribe_options.py  04_voice_cloning.py  05_long_text.py  06_batch_processing.py  07_api_backend.py  08_roundtrip_test.py  09_custom_backend.py  10_streaming_tts.py  11_batch_directory.py  12_cli_only.sh  asr_transcribe.py  tts_synthesize.py  tts_voice_cloning.py
revos/: __init__.py  catalog.py  config.py  exceptions.py  usage.py
revos/asr/: __init__.py
revos/cli/: main.py
revos/registry/: manifest.py  registry.py  status.py
revos/tts/: __init__.py  base.py  revovoice_engine.py
revospeech/: __init__.py  catalog.py  config.py  device.py  hf_utils.py  http_client.py  logging_config.py  usage.py
revospeech/asr/: __init__.py  audio.py  base.py  result.py  revolab_engine.py  sherpa_engine.py
revospeech/cli/: __init__.py  main.py
revospeech/models/asr/: revolab-asr.yaml  zipformer_v2.yaml
revospeech/models/tts/: revovoice.yaml  vits-ms.yaml
revospeech/models/util/: sidon.yaml
revospeech/registry/: __init__.py  downloader.py  manifest.py  registry.py  status.py
revospeech/tts/: __init__.py  base.py  result.py  revolab_engine.py  revovoice_engine.py  vits_engine.py
revospeech/util/: __init__.py  base.py  sidon_engine.py
revospeech/util/assets/: mel_frontend.onnx
tests/: conftest.py  test_api_backend.py  test_asr.py  test_asr_streaming.py  test_audio.py  test_auto_download.py  test_base_classes.py  test_bytesio.py  test_catalog.py  test_catalog_cli.py  test_catalog_cli_extras.py  test_catalog_extras.py  test_cli.py  test_cli_batch_setup.py  test_cli_extras.py  test_compat_gates.py  test_config.py  test_coverage_gaps.py  test_device.py  test_docstring_examples.py  test_downloader.py  test_edge_cases.py  test_extension_protocol.py  test_hf_utils.py  test_integration.py  test_logging_config.py  test_new_features.py  test_registry.py  test_roundtrip.py  test_status.py  test_top_level.py  test_tts.py  test_tts_extras.py  test_tts_long.py  test_tts_streaming.py  test_usage.py
