[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revospeech"
version = "0.1.1"
description = "A unified Python library for speech AI — ASR and TTS using open models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "RevoSpeech Team" },
]
keywords = ["asr", "tts", "speech", "sherpa-onnx", "zipformer", "omnivoice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "sherpa-onnx>=1.10",
    "sherpa-onnx-core",
    "onnxruntime>=1.16",
    "numpy",
    "soundfile",
    "click>=8.0",
    "pyyaml",
    "huggingface-hub>=1.11.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu"]
tts = ["omnivoice"]
api = ["httpx>=0.27"]
all = ["onnxruntime-gpu", "omnivoice", "httpx>=0.27"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy>=1.11"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://github.com/khursanirevo/revospeech"
Repository = "https://github.com/khursanirevo/revospeech"
Issues = "https://github.com/khursanirevo/revospeech/issues"

[project.scripts]
revospeech = "revospeech.cli.main:cli"

[project.entry-points."revospeech.models"]

[tool.hatch.build.targets.wheel]
packages = ["revospeech"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (requires model download)",
    "api: marks tests requiring API key",
    "roundtrip: marks round-trip integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Don't be too strict initially — focus on catching real bugs
disallow_untyped_defs = false
check_untyped_defs = true
# Allow untyped decorators (Click, etc.)
disallow_untyped_decorators = false
# Exclude tests for now
exclude = ["tests/", "examples/"]

[[tool.mypy.overrides]]
module = ["sherpa_onnx.*", "sounddevice.*", "tqdm.*"]
ignore_missing_imports = true
